# FlowInChannelOptimization

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  simulation_parameters.hpp
src/plotting/: main_plotting.py
src/simulation/: CMakeLists.txt  simulation.cpp  simulation.hpp
test/: CMakeLists.txt
test/test_simulation/: CMakeLists.txt  test_simulation.cpp
